--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "antd": "^5.28.0",
     "axios": "^1.12.2",
     "faicon": "^1.1.0",
+    "jwt-decode": "^3.1.2",
     "moment": "^2.30.1",
     "react": "^19.1.1",
     "react-barcode-scanner": "^4.0.0",
