--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "xlsx-style": "^0.8.13"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^5.1.2",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.3.3"
