--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-icons": "^5.5.0",
     "react-qr-barcode-scanner": "^2.1.17",
     "react-router-dom": "^6.30.1",
+    "socket.io-client": "^4.8.3",
     "swal": "^0.1.0",
     "sweetalert2": "^11.26.3",
     "vite": "^4.3.9",
